# ecal_measurement_analysis_3

./: AGENTS.md  NEXT_STEP_PROMPT.md  README.md  TASKS.md  pyproject.toml  requirements.md
docs/adr/: 0001-counter-wrap-normalization-threshold.md  0002-expected-period-precedence.md  README.md
measurement_inspector/: __init__.py  app.py
measurement_inspector/config/: defaults.py  schema.py
measurement_inspector/io/: __init__.py  ecal_reader.py  record_models.py
measurement_inspector/model/: __init__.py  base_table.py  counter_logic.py  derived_metrics.py  summaries.py
tests/: synthetic_fixtures.py  test_adapter_protocol_and_fixtures.py  test_base_table.py  test_config_and_record_models.py  test_counter_logic.py  test_derived_metrics.py  test_smoke.py  test_summaries.py
